Update SaveListsPacket.java
Network Optimization