@@ -11,72 +11,82 @@ import java.util.List;
 import java.util.function.Supplier;
 
 public class SaveListsPacket {
+    private static final int MAX_STR_LEN = 128;
+
     private final List<String> entries;
-    private final List<Boolean> friendOrFoe;
+    private final byte[] friendMask;
     private final String idString;
     private final boolean isIdString;
 
     /** Constructor for list mode **/
     public SaveListsPacket(List<String> entries, List<Boolean> friendOrFoe) {
-        if (entries == null || friendOrFoe == null) {
-            throw new IllegalArgumentException("entries and friendOrFoe cannot be null");
+        if (entries == null || friendOrFoe == null)
+            throw new IllegalArgumentException("Lists cannot be null");
+        if (entries.size() != friendOrFoe.size())
+            throw new IllegalArgumentException("Lists must match length");
+
+        this.entries = List.copyOf(entries);
+        this.friendMask = new byte[(entries.size() + 7) / 8];
+
+        for (int i = 0; i < friendOrFoe.size(); i++) {
+            if (friendOrFoe.get(i)) {
+                friendMask[i >> 3] |= (byte) (1 << (i & 7));
+            }
         }
-        if (entries.size() != friendOrFoe.size()) {
-            throw new IllegalArgumentException("entries and friendOrFoe must be the same length");
-        }
-        this.entries      = new ArrayList<>(entries);
-        this.friendOrFoe  = new ArrayList<>(friendOrFoe);
-        this.idString     = null;
-        this.isIdString   = false;
+
+        this.idString = null;
+        this.isIdString = false;
     }
 
     /** Constructor for single‐string mode **/
     public SaveListsPacket(String idString) {
-        if (idString == null) {
-            throw new IllegalArgumentException("idString cannot be null");
-        }
-        this.entries      = Collections.emptyList();
-        this.friendOrFoe  = Collections.emptyList();
-        this.idString     = idString;
-        this.isIdString   = true;
+        if (idString == null || idString.isEmpty())
+            throw new IllegalArgumentException("idString cannot be null/empty");
+
+        this.entries = List.of();
+        this.friendMask = null;
+        this.idString = idString;
+        this.isIdString = true;
     }
 
     /** Encode either the string or the two lists, prefixed by a mode‐flag **/
     public static void encode(SaveListsPacket pkt, FriendlyByteBuf buf) {
         buf.writeBoolean(pkt.isIdString);
+
         if (pkt.isIdString) {
-            buf.writeUtf(pkt.idString, 32767);
-        } else {
-            buf.writeInt(pkt.entries.size());
-            for (String s : pkt.entries) {
-                buf.writeUtf(s, 32767);
-            }
-            buf.writeInt(pkt.friendOrFoe.size());
-            for (boolean b : pkt.friendOrFoe) {
-                buf.writeBoolean(b);
-            }
+            buf.writeUtf(pkt.idString, MAX_STR_LEN);
+            return;
         }
+
+        buf.writeVarInt(pkt.entries.size());
+        for (String s : pkt.entries) {
+            buf.writeUtf(s, MAX_STR_LEN);
+        }
+
+        buf.writeByteArray(pkt.friendMask);
     }
 
     /** Decode in the same order: read flag, then either string or lists **/
     public static SaveListsPacket decode(FriendlyByteBuf buf) {
         boolean isId = buf.readBoolean();
+
         if (isId) {
-            String s = buf.readUtf(32767);
-            return new SaveListsPacket(s);
-        } else {
-            int es = buf.readInt();
-            List<String> entries = new ArrayList<>(es);
-            for (int i = 0; i < es; i++) {
-                entries.add(buf.readUtf(32767));
-            }
-            int fs = buf.readInt();
-            List<Boolean> foes = new ArrayList<>(fs);
-            for (int i = 0; i < fs; i++) {
-                foes.add(buf.readBoolean());
-            }
-            return new SaveListsPacket(entries, foes);
+            return new SaveListsPacket(buf.readUtf(MAX_STR_LEN));
         }
+
+        int size = buf.readVarInt();
+        List<String> entries = new ArrayList<>(size);
+        for (int i = 0; i < size; i++) {
+            entries.add(buf.readUtf(MAX_STR_LEN));
+        }
+
+        byte[] mask = buf.readByteArray();
+        List<Boolean> flags = new ArrayList<>(size);
+        for (int i = 0; i < size; i++) {
+            flags.add((mask[i >> 3] & (1 << (i & 7))) != 0);
+        }
+
+        return new SaveListsPacket(entries, flags);
     }
 
     /** Handle on the server: call the appropriate ListNBTHandler method **/
@@ -89,10 +99,16 @@ public class SaveListsPacket {
             if (pkt.isIdString) {
                 ListNBTHandler.saveStringToHeldItem(player, pkt.idString);
             } else {
-                ListNBTHandler.saveToHeldItem(player, pkt.entries, pkt.friendOrFoe);
+                List<Boolean> flags = new ArrayList<>(pkt.entries.size());
+                for (int i = 0; i < pkt.entries.size(); i++) {
+                    flags.add((pkt.friendMask[i >> 3] & (1 << (i & 7))) != 0);
+                }
+                ListNBTHandler.saveToHeldItem(player, pkt.entries, flags);
             }
-            player.getInventory().setChanged(); // force sync
+
+            player.inventoryMenu.broadcastChanges();
         });
+
         ctx.setPacketHandled(true);
     }
 }
